welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:1: error: value avance is not a member of Unit
 avance() avance() avance()
          ^